# kdmp-parser

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  builder.py  run-tests.py
.github/workflows/: kdmp-parser.yml
src/: kdmp-parser.sln
src/kdmp-parser/: kdmp-parser-structs.h  kdmp-parser.cc  kdmp-parser.h  kdmp-parser.vcxproj  kdmp-parser.vcxproj.filters
src/lib/: filemap.h  kdmp-parser-structs.h  kdmp-parser.cc  kdmp-parser.h  platform.h
src/parser/: CMakeLists.txt  parser.cc  parser.vcxproj  parser.vcxproj.filters
src/python/: CMakeLists.txt  README.md  pyproject.toml  python-kdmp.cc  python-kdmp.h
src/python/kdmp_parser/: __init__.py  page.py
src/python/src/: kdmp_parser.cc
src/python/tests/: test_page.py  test_parser.py  test_version.py
src/test/: CMakeLists.txt  main.cc  test.cc  test.vcxproj  test.vcxproj.filters
src/testapp/: testapp.cc
src/tests/: CMakeLists.txt  tests.py  tests_parser.cc  tests_version.cc
